# xio

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  autogen.sh  config.h.in  configure  configure.ac  env.sh  hudson.sh  libxio.pc
binding/: CMakeLists.txt
binding/go/: poll.go  proxyio.go  socket.go  sp.go  sp_test.go
binding/lua/: lua_proxyio.c  lua_proxyio.h  lua_xio.c  lua_xio.h  poll.c  proxyio.lua.c  socket.c  sp.c  ts.lua  xio_if.c  xio_if.h  xio_ts.lua
binding/lua/test/: lua_xio_ts.cc  sp_reqrep.lua
binding/lua51/: lxmsg.c  lxmsg.h
binding/lua51/test/: lua_xio_ts.cc  ts.lua
binding/php/: config.m4  php_xio.c  php_xio.h  ts.php  xio.ini  xio_if.c  xio_if.h  xio_ts.php
binding/php/tests/: 001.phpt
binding/python/: cpy_xio.c  cpy_xio.h  ext.py  msgobject.c  proxyio.py.c  py_proxyio.c  py_proxyio.h  py_xio.c  python_xio.c  python_xio.h  ts.py  xio_if.c  xio_if.h  xio_ts.py
binding/python/example/: client.py  server.py
binding/python/test/: py_xio_ts.cc  sp_reqrep.py  xio_ts.cc
binding/ruby/: ext.rb  extconf.rb  ruby_xio.c  ts.rb  xio_if.c  xio_rbif.c  xio_ts.rb
binding/test/: main_ts.cc
src/: CMakeLists.txt
src/base/: base.c  base.h
src/base/bufio/: bio.c  bio.h
src/base/channel/: act_channel.c  channel.c  channel.h  channel_base.h  inproc_channel.c  io_channel.c  poll.c  poll.h  poll_struct.c
src/base/ds/: krb.h  list.h  map.h  skrb.h  skrb_sync.h
src/base/hardware/: hw.h
src/base/os/: alloc.c  alloc.h  efd.c  efd.h  epoll.c  epoll.h  eventloop.c  eventloop.h  linux.h  slab.c  slab.h  timesz.h
src/base/path/: filepath.c  filepath.h
src/base/runner/: taskpool.c  taskpool.h  thread.c  thread.h
src/base/stats/: modstat.c
src/base/sync/: atomic.c  atomic.h  condition.c  condition.h  mutex.c  mutex.h  waitgroup.c
src/base/syscall/: sys_call.sh  sys_efd.c  sys_efd.h  sys_efd_unix.c  sys_efd_unix.h  sys_efd_win.c  sys_efd_win.h  sys_fio.c  sys_fio.h  sys_tcp_unix.c  sys_tcp_unix.h  sys_thread_unix.c
src/base/test/: bufio_ts.cc  channel_ts.cc  krb_ts.cc  main_ts.cc  socket_ts.cc  sync_ts.cc
src/base/transport/: channel.c  channel.h  channel_poller.c  channel_poller.h  sockaddr.c  sockaddr.h  transport.c  transport.h
src/bc/: xiobc.c
src/binding/lisp/: README.md
src/channel/: channel.c  channel.h  channel_base.h  inproc_channel.c  io_channel.c  poll.c  poll.h  poll_struct.c
src/channel/test/: channel_ts.cc
src/common/: base.h
src/common/atomic/: atomic.h
src/common/bufio/: bio.c  bio.h
src/core/: accepter.c  accepter.h  cf.c  cf.h  channel.c  channel.h  core.h  grp.c  grp.h  hdr.h  proto_parser.c  proto_parser.h  proxy.c  proxy.h  rio.c  rio.h  role.c  role.h
src/endpoint/: ep.h  ep_add.c  ep_buf.c  ep_bus.c  ep_close.c  ep_getopt.c  ep_hdr.h  ep_module.c  ep_open.c  ep_proxy.c  ep_recv.c  ep_rm.c  ep_send.c  ep_setopt.c  ep_struct.c  ep_struct.h  ep_trace.c  ep_ubuf.c
src/ep/: ep.c  ep.h  ep_buf.c  ep_fd.c  ep_global.c  ep_hdr.c  ep_hdr.h  ep_msg.c  ep_proxy.c  ep_recv.c  ep_send.c  ep_struct.h  ep_url.c  ep_url.h  hdr.c  hdr.h  pxy.c  pxy.h  rtb_struct.c  rtb_struct.h  url_parse.c  url_parse.h
src/ev/: ev.c  ev.h  ev_define.h  ev_epoll.c  ev_epoll.h  ev_kqueue.c  ev_kqueue.h  ev_poll.c  ev_poll.h  ev_select.c  ev_select.h  ev_stats.c  ev_stats.h  eventpoll.c  eventpoll.h
src/init/: __init.c
src/libc/: base.c  base.h
src/msgbuf/: msgbuf.c  msgbuf.h  msgbuf_head.c  msgbuf_head.h
src/pipeline/: pipe_add.c  pipe_buf.c  pipe_close.c  pipe_module.c  pipe_open.c  pipe_recv.c  pipe_rm.c  pipe_send.c  pipe_struct.h
src/plugins/: README.md
src/poll/: eventpoll.c  pglobal.c  pglobal.h  poll_struct.c  poll_struct.h  select.c  stats.c  stats.h  xeventpoll.c  xeventpoll.h  xpoll.c  xpoll_struct.c  xpoll_struct.h  xselect.c
src/protocols/: hdr.h
src/proxy/: ep.c  ep.h  hdr.c  hdr.h  proxy.c  proxy.h  pxy.c  pxy.h  route_rank.c  route_rank.h  rtb_struct.c  rtb_struct.h
src/py/: ep.c  ep.h  ep_buf.c  ep_fd.h  ep_proxy.c  ep_proxy.h  ep_send.c
src/rex/: rex.c  rex.h  rex_if.h  rex_posix.c  rex_posix.h  rex_posix_tcp.c  rex_posix_unix.c  rex_win.c  rex_win.h
src/sock/: x.c  xaccept.c  xbase.h  xbind.c  xclose.c  xconnect.c  xcpu.c  xcpu.h  xgb.c  xgb.h  xgetsockopt.c  xio_listener.c  xlisten.c  xmsg.c  xmsg.h  xnotify.c  xopt.c  xpf_inp.c  xpf_inp_listener.c  xpf_io.c  xpf_io_listener.c  xpf_mul_listener.c  xpoll_notify.c  xpoll_struct.c  xprotocol.c  xprotocol.h  xrecv.c  xsend.c  xsend_recv.c  xsetsockopt.c  xsock_struct.c  xsock_struct.h  xsockaddr.c  xsockaddr.h  xsocket.c  xurl.c
src/socket/: actor.c  actor.h  bind.c  close.c  connect.c  eventnotify.c  getsockopt.c  global.c  global.h  inproc.h  ipc.h  listen.c  log.h  recv.c  send.c  setsockopt.c  skbuf.c  skbuf.h  sock.c  sock.h  sockaddr.c  sockaddr.h  sockbase.c  sockbase.h  sstats.c  sstats.h  stats.c  stats.h  task_runner.c  task_runner.h  tcp.h  tcpipc.h  worker.c  worker.h  xactor.c  xactor.h  xbind.c  xclose.c  xconnect.c  xcpu.c  (+37 more)
src/sp/: reqrep.h  sp_add.c  sp_close.c  sp_endpoint.c  sp_getopt.c  sp_hdr.c  sp_hdr.h  sp_module.c  sp_module.h  sp_recv.c  sp_rm.c  sp_send.c  sp_setopt.c
src/utils/: alloc.c  alloc.h  atomic.h  atomic_gcc.c  atomic_gcc.h  atomic_spin.c  atomic_spin.h  base.h  bio.c  bio.h  bufio.c  bufio.h  condition.c  condition.h  conhash.c  conhash.h  consistent_hash.c  consistent_hash.h  crc.h  crc16.c  efd.c  efd.h  eventloop.c  eventloop.h  filepath.c  filepath.h  i64_rb.c  i64_rb.h  krb.c  krb.h  krb_augmented.c  krb_augmented.h  list.h  log.h  map.h  md5.c  md5.h  mem_cache.c  mem_cache.h  modstat.c  (+36 more)
src/x/: x.c  xbase.h  xinproc.c  xinproc_listener.c  xio.c  xio_listener.c  xmq.c  xmq.h  xmul.c  xmule_listener.c  xpoll.c  xpoll.h  xpoll_struct.c  xsock.h  xurl.c  xurl.h
src/xpoll/: pg.c  pglobal.c  poll_struct.c  poll_struct.h  xeventpoll.c  xselect.c
src/xsocket/: eventnotify.c  global.c  sockbase.c  sockbase.h  worker.c  xbind.c  xclose.c  xconnect.c  xg.c  xg.h  xgetsockopt.c  xlisten.c  xrecv.c  xsend.c  xsetsockopt.c
(+442 files in other folders)
