cmake_minimum_required(VERSION 2.6)
project( proxyio )

## compile xlibc
aux_source_directory( libc/ XLIBC )
aux_source_directory( libc/bufio XLIBC )
aux_source_directory( libc/ds XLIBC )
aux_source_directory( libc/hash XLIBC )
aux_source_directory( libc/transport XLIBC )
aux_source_directory( libc/transport/tcp XLIBC )
aux_source_directory( libc/transport/ipc XLIBC )
aux_source_directory( libc/os XLIBC )
aux_source_directory( libc/syscall XLIBC )
aux_source_directory( libc/path XLIBC )
aux_source_directory( libc/runner XLIBC )
aux_source_directory( libc/stats XLIBC )
aux_source_directory( libc/sync XLIBC )
add_library( xlibc STATIC ${XLIBC} )

## compile socket
aux_source_directory( socket XIO )
aux_source_directory( poll XIO )
## aux_source_directory( endpoint XIO )
aux_source_directory( sp XIO )
aux_source_directory( sp/reqrep XIO )
add_library( xio STATIC ${XIO} )
target_link_libraries( xio xlibc uuid )

## compile unit_test
aux_source_directory( poll/test UNIT_TEST )
aux_source_directory( libc/test UNIT_TEST )
aux_source_directory( socket/test UNIT_TEST )
## aux_source_directory( endpoint/test UNIT_TEST )
aux_source_directory( sp/test UNIT_TEST )
add_executable( unit_test ${UNIT_TEST} )
target_link_libraries( unit_test xio xlibc gtest pthread )
if (DEBUG_mode)
   target_link_libraries( unit_test gcov )
endif()
